name:                eckchay
version:             0.1.0.0
synopsis:            Check URLs for changes in various ways and notify when a change happens
-- description:         
homepage:            https://github.com/relrod/eckchay/
license:             BSD3
license-file:        LICENSE
author:              Ricky Elrod
maintainer:          ricky@elrod.me
-- copyright:           
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

executable eckchay
  main-is:             Main.hs
  -- other-modules:       
  -- other-extensions:    
  build-depends:       base >= 4 && < 5
  -- hs-source-dirs:      
  default-language:    Haskell2010
